[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/CrushMachine.gd" type="Script" id=1]
[ext_resource path="res://sprites/pistao_on.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 379.237, 37.2133 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.4873, 176.027 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53.6811, 93.7094 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 154.691 )

[node name="CrushMachine" type="KinematicBody2D" groups=[
"crush",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TimerSpikesInOut" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerSpikes" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerCrushersTogether" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerCrush" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="."]
position = Vector2( 82.4421, 1.47018 )
shape = SubResource( 1 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -372.844, -2.3327 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -317.531, -0.589333 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Area2DSpikes" type="Area2D" parent="." groups=[
"spikes",
]]
position = Vector2( -426.28, -0.0572357 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DSpikes"]
position = Vector2( 5.04199, 6.93275 )
shape = SubResource( 4 )
[connection signal="timeout" from="TimerSpikesInOut" to="." method="_on_TimerSpikesInOut_timeout"]
[connection signal="timeout" from="TimerSpikes" to="." method="_on_TimerSpikes_timeout"]
[connection signal="timeout" from="TimerCrushersTogether" to="." method="_on_TimerCrushersTogether_timeout"]
[connection signal="timeout" from="TimerCrush" to="." method="_on_TimerCrush_timeout"]
[connection signal="area_entered" from="Area2DSpikes" to="." method="_on_Area2DSpikes_area_entered"]
[connection signal="body_entered" from="Area2DSpikes" to="." method="_on_Area2DSpikes_body_entered"]
